# Lu-decomposition-and-the-Gaussian-method

./: CMakeLists.txt  Gaussian.cpp  Gaussian.h  MatrixGenerator.cpp  MatrixGenerator.h  MatrixOperation.cpp  MatrixOperation.h  ProfileMatrix.cpp  ProfileMatrix.h  luDecomposition.cpp  luDecomposition.h  main.cpp
